[package]
name = "bilibili-live-danmu"
version = "0.5.0"
authors = ["fplust <fplustlu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["time", "rt"] }
tokio-stream = "0.1.1"
async-tungstenite = { version = "0.11", features = ["tokio-runtime", "tokio-rustls"] }
# tokio = { version = "0.2", features = ["stream", "time", "rt-core"] }
# async-tungstenite = { version = "0.9", features = ["tokio-runtime", "tokio-rustls"] }
url = "2.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# bincode = "1"
bytes = "0.6"
byteorder = "1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"]}
libflate = "1.0"

[dev-dependencies]
clap = "2"
# browsercookie-rs = "0.1"
browsercookie-rs = { path = "../browsercookie-rs" }
regex = "1"
ansi_term = "0.12"
rustyline = "6"
# cursive = "0.12"

[lib]
name = "blive_danmu"

[[example]]
name = "blive"
