[package]
name = "bilibili-live-danmu"
version = "0.6.0"
authors = ["fplust <fplustlu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["time", "rt"] }
tokio-stream = "0.1.8"
async-tungstenite = { version = "0.16.0", features = ["tokio-runtime", "tokio-rustls-native-certs"] }
url = "2.2.2"
futures = "0.3.18"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
# bincode = "1"
bytes = "1.1.0"
byteorder = "1.4.3"
# chrono = "0.4.19"
time = { version = "0.3", features = ["std", "formatting"] }
# reqwest = { version = "0.11.6", features = ["json"] }
flate2 = "1.0.22"
thiserror = "1.0.30"
clap = "2.33.3"
# browsercookie-rs = "0.1"
# browsercookie-rs = { path = "../browsercookie-rs" }
regex = "1.5.4"
ansi_term = "0.12.1"
once_cell = "1.8.0"
# rustyline = "9.0.0"

[lib]
name = "blive_danmu"

[[bin]]
name = "blive"
path = "src/bin/blive.rs"

# [[bin]]
# name = "test"
# path = "src/bin/test.rs"

[profile.release]
lto = true
